tests/fixtures/guardrails/invalid/concatenated-fetch-direct-admin-access/scripts/backfill.mjs
const shopOrigin = "https://example.myshopify.com";

export async function runBackfill() {
  return fetch(shopOrigin + "/admin/api/2026-01/graphql.json");
}
